--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,10 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+ServerResource/ConsoleApplication_02.exe
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/link.write.1.tlog
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/link.read.1.tlog
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/link.command.1.tlog
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/ConsoleApplication_02.lastbuildstate
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/CL.write.1.tlog
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/CL.read.1.tlog
