visual studio log파일 무시 2

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/link.command.1.tlog
 ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/ConsoleApplication_02.lastbuildstate
 ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/CL.write.1.tlog
 ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/CL.read.1.tlog
+ConsoleApplication_02/ServerResource/vc120.idb
+ConsoleApplication_02/ServerResource/ConsoleA.DA8BA145.tlog/cl.command.1.tlog
